--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maciej Śpiewak - tlumacz przysięgły z języka angielskiego</title>
     <!-- Tailwind CSS CDN -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -47,14 +44,18 @@
       }
     </style>
   </head>
-  <body class="font-sans bg-gray-100 text-gray-900 h-screen">
-    <header class="text-white text-center p-4">
-      <h1 class="text-9xl roboto-black text-gray-400">Acta non verba</h1>
+  <body class="font-sans bg-gray-100 text-gray-900 flex flex-col min-h-screen">
+    <header
+      class="flex flex-col text-white text-center justify-center content-center mt-4"
+    >
+      <h1 class="text-6xl md:text-9xl roboto-black mx-16 text-gray-400">
+        Acta non verba
+      </h1>
     </header>
 
-    <div class="sm:max-w-2xl mx-auto px-4">
-      <section id="introduction" class="my-8">
-        <h2 class="text-2xl text-green-500 mb-4 roboto-black">O mnie</h2>
+    <div>
+      <section id="introduction" class="sm:max-w-2xl mx-auto px-4 my-8">
+        <h2 class="text-2xl text-green-700 mb-4 roboto-black">O mnie</h2>
         <div class="flex gap-4 bg-gray-200 p-4 flex-col sm:flex-row">
           <img
             src="./assets/img_maciej.jpg"
@@ -72,11 +73,9 @@
         </div>
       </section>
 
-      <section id="services" class="my-8">
-        <h2 class="text-2xl text-green-500 mb-4 roboto-black">Usługi</h2>
-        <div
-          class="flex gap-4 sm:gap-8 bg-teal-200 px-8 py-4 flex-col sm:flex-row"
-        >
+      <section id="services" class="sm:max-w-2xl mx-auto px-4 my-8">
+        <h2 class="text-2xl text-green-700 mb-4 roboto-black">Usługi</h2>
+        <div class="flex gap-4 sm:gap-8 px-8 py-4 flex-col sm:flex-row">
           <ul class="list-disc list-outside">
             <li class="mb-4">
               Świadczę usługi na rzecz sądów, notariuszy, kancelarii prawnych,
@@ -108,8 +107,8 @@
         </div>
       </section>
 
-      <section id="contact" class="my-8">
-        <h2 class="text-2xl text-green-500 mb-4 roboto-black">Kontakt</h2>
+      <section id="contact" class="sm:max-w-2xl mx-auto px-4 my-8">
+        <h2 class="text-2xl text-green-700 mb-4 roboto-black">Kontakt</h2>
         <p>Tłumacz przysięgły języka angielskiego</p>
         <p>
           Lista tłumaczy przysięgłych prowadzona przez Ministra Sprawiedliwości,
@@ -124,16 +123,14 @@
           Email:
           <a
             href="mailto:dobra@post.pl"
-            class="text-green-500 hover:text-green-700 hover:underline"
+            class="text-green-700 hover:text-green-700 hover:underline"
             >dobra@post.pl</a
           >
         </p>
       </section>
     </div>
 
-    <footer
-      class="bg-gray-800 text-white text-center p-4 fixed bottom-0 w-full"
-    >
+    <footer class="bg-gray-800 text-white text-center p-4 w-full mt-auto">
       <p>&copy; 2024 Maciej Śpiewak. All rights reserved.</p>
     </footer>
   </body>
