--- a/index.html
+++ b/index.html
@@ -45,31 +45,32 @@
     </style>
   </head>
   <body class="font-sans bg-gray-100 text-gray-900 flex flex-col min-h-screen">
-    <header
-      class="flex flex-col text-white text-center justify-center content-center mt-4"
-    >
-      <h1 class="text-6xl md:text-9xl roboto-black mx-16 text-gray-400">
-        Acta non verba
-      </h1>
-    </header>
-
     <div>
       <section id="introduction" class="sm:max-w-2xl mx-auto px-4 my-8">
         <h2 class="text-2xl text-green-700 mb-4 roboto-black">O mnie</h2>
-        <div class="flex gap-4 bg-gray-200 p-4 flex-col sm:flex-row">
+        <div class="flex gap-2 sm:gap-4 bg-gray-200 p-4 flex-col sm:flex-row">
           <img
             src="./assets/img_maciej.jpg"
             class="sm:w-36 rounded-md object-cover w-full"
           />
-          <p>
-            Prowadzę działalność tłumacza przysięgłego –
-            <span class="roboto-bold">język angielski</span> - od 27.10.1998 r.,
-            pismo Pana Grzegorza Chojnowskiego, Prezesa Sądu Wojewódzkiego w
-            Szczecinie, A.354/98/T; po zmianach legislacyjnych, pismem
-            DO-V-0191-1283/05 Ministerstwo Sprawiedliwości poinformowało o
-            wpisie pod numerem TP/507/05 na listę tłumaczy przysięgłych,
-            prowadzoną przez Ministra Sprawiedliwości;
-          </p>
+          <div class="flex flex-col">
+            <p class="m-0 p-0">
+              Tel.
+              <a
+                href="tel:+48602358768"
+                class="text-green-700 hover:text-green-700 hover:underline"
+                >602 35 87 68</a
+              >
+            </p>
+            <p>
+              Email:
+              <a
+                href="mailto:dobra@post.pl"
+                class="text-green-700 hover:text-green-700 hover:underline"
+                >dobra@post.pl</a
+              >
+            </p>
+          </div>
         </div>
       </section>
 
@@ -109,16 +110,14 @@
 
       <section id="contact" class="sm:max-w-2xl mx-auto px-4 my-8">
         <h2 class="text-2xl text-green-700 mb-4 roboto-black">Kontakt</h2>
-        <p>Tłumacz przysięgły języka angielskiego</p>
         <p>
-          Lista tłumaczy przysięgłych prowadzona przez Ministra Sprawiedliwości,
-          wpis pod numerem TP/507/05
+          Tel.
+          <a
+            href="tel:+48602358768"
+            class="text-green-700 hover:text-green-700 hover:underline"
+            >602 35 87 68</a
+          >
         </p>
-
-        <p>mgr inż. Maciej Śpiewak</p>
-        <p>ul. Szczecińska 1 „L”/3</p>
-        <p>72-003 Dobra</p>
-        <p>Tel. 602 35 87 68</p>
         <p>
           Email:
           <a
