corrections to info card

--- a/index.html
+++ b/index.html
@@ -54,21 +54,33 @@
             class="sm:w-36 rounded-md object-cover w-full"
           />
           <div class="flex flex-col">
-            <p class="m-0 p-0">
-              Tel.
-              <a
-                href="tel:+48602358768"
-                class="text-green-700 hover:text-green-700 hover:underline"
-                >602 35 87 68</a
-              >
-            </p>
+            <div class="flex gap-0 mb-2 flex-col sm:flex-row sm:gap-4">
+              <p class="m-0 p-0">
+                Tel.
+                <a
+                  href="tel:+48602358768"
+                  class="text-green-700 hover:text-green-700 hover:underline"
+                  >602 35 87 68</a
+                >
+              </p>
+              <p class="p-0 m-0">
+                Email:
+                <a
+                  href="mailto:dobra@post.pl"
+                  class="text-green-700 hover:text-green-700 hover:underline"
+                  >dobra@post.pl</a
+                >
+              </p>
+            </div>
+
             <p>
-              Email:
-              <a
-                href="mailto:dobra@post.pl"
-                class="text-green-700 hover:text-green-700 hover:underline"
-                >dobra@post.pl</a
-              >
+              Prowadzę działalność tłumacza przysięgłego –
+              <span class="roboto-bold">język angielski</span> - od 27.10.1998
+              r., pismo Pana Grzegorza Chojnowskiego, Prezesa Sądu Wojewódzkiego
+              w Szczecinie, A.354/98/T; po zmianach legislacyjnych, pismem
+              DO-V-0191-1283/05 Ministerstwo Sprawiedliwości poinformowało o
+              wpisie pod numerem TP/507/05 na listę tłumaczy przysięgłych,
+              prowadzoną przez Ministra Sprawiedliwości;
             </p>
           </div>
         </div>
