added more info:

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             </div>
 
             <p>
-              Prowadzę działalność tłumacza przysięgłego –
+              Nazywam się Maciej Śpiewak. Prowadzę działalność tłumacza
+              przysięgłego –
               <span class="roboto-bold">język angielski</span> - od 27.10.1998
               r., pismo Pana Grzegorza Chojnowskiego, Prezesa Sądu Wojewódzkiego
               w Szczecinie, A.354/98/T; po zmianach legislacyjnych, pismem
