--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta http-equiv="refresh" content="0; url=/index.html" />
     <script type="text/javascript">
       // JavaScript redirect in case the meta refresh doesn't work
-      window.location.href = "/index.html";
+      window.location.href = "/";
     </script>
   </head>
   <body>
