task: podmiana zdjecia

--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
     />
     <style>
       body {
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
       }
 
       .roboto-regular {
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
         font-weight: 400;
         font-style: normal;
       }
       .roboto-medium {
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
         font-weight: 500;
         font-style: normal;
       }
       .roboto-bold {
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
         font-weight: 700;
         font-style: normal;
       }
       .roboto-black {
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
         font-weight: 900;
         font-style: normal;
       }
       .roboto-regular-italic {
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
         font-weight: 400;
         font-style: italic;
       }
@@ -57,15 +57,17 @@
 
       <section id="introduction" class="sm:max-w-2xl mx-auto px-4 my-8">
         <h2 class="text-2xl text-green-700 mb-4 roboto-black">O mnie</h2>
-        <div class="grid gap-2 sm:gap-4 bg-gray-200 p-4 grid-cols-3">
-          <div class="row-span-2">
+        <div
+          class="grid gap-2 sm:gap-4 bg-gray-200 p-4 grid-cols-1 sm:grid-cols-2"
+        >
+          <div class="col-span-2 sm:col-span-1">
             <img
-              src="./assets/img_maciej.jpg"
-              class="rounded-md object-cover w-36 sm:w-auto"
+              src="./assets/main_image.jpg"
+              class="rounded-md object-cover sm:w-auto"
             />
           </div>
 
-          <div class="col-span-2">
+          <div class="col-span-2 sm:col-span-1">
             <p class="m-0 p-0">
               Tel.
               <a
@@ -84,7 +86,7 @@
             </p>
           </div>
 
-          <p class="sm:col-span-2 col-span-3">
+          <p class="sm:col-span-2">
             Nazywam się Maciej Śpiewak. Prowadzę działalność tłumacza
             przysięgłego –
             <span class="roboto-bold">język angielski</span> - od 27.10.1998 r.,
@@ -92,7 +94,7 @@
             Szczecinie, A.354/98/T; po zmianach legislacyjnych, pismem
             DO-V-0191-1283/05 Ministerstwo Sprawiedliwości poinformowało o
             wpisie pod numerem TP/507/05 na listę tłumaczy przysięgłych,
-            prowadzoną przez Ministra Sprawiedliwości;
+            prowadzoną przez Ministra Sprawiedliwości.
           </p>
         </div>
       </section>
